# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-15 10:16:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-119

    Summary:
      catalog, fix query docstring (#242)
    Revision:
      itools--main--0.12--patch-119


    modified files:
     Changelog catalog/Query.py


2005-12-15 10:13:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-118

    Summary:
      fix release notes
    Revision:
      itools--main--0.12--patch-118


    modified files:
     Changelog RELEASE.txt


2005-12-13 15:55:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-117

    Summary:
      cms, manually merge patches from ikaaro 0.14, 0.15
    Revision:
      itools--main--0.12--patch-117

    The patches merged are:
    
      ikaaro--main--0.14--patch-141
      - groups, speed up add user form (too slow when many users)
    
      ikaaro--main--0.15--patch-110
      - skins, fix breadcrumb (no link if user not allowed to click)
    
      ikaaro--main--0.15--patch-114
      - use the itools.datatypes.XML encoder/decoder

    modified files:
     Changelog cms/Group.py cms/Metadata.py cms/skins.py


2005-12-13 15:13:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-116

    Summary:
      merge fixes from the 0.11 branch
    Revision:
      itools--main--0.12--patch-116

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-64
       web, interpret the "Location" header as a URI reference
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-66
       uri, make query work with multiple values for a single name
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-67
       datatypes, add XML encoder/decoder (a medium, not a value)
    

    modified files:
     Changelog datatypes/__init__.py datatypes/primitive.py
     uri/generic.py web/headers.py web/response.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.11--patch-64